--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -110,6 +110,7 @@ jobs:
               id: run_post_install_unit_test
               run: |
                   bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
+                  rm -rf ${{github.workspace}}
 
             - uses: actions/checkout@v4
 
