--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -38,6 +38,7 @@ env:
     CICD_ODOO_OPTIONS: ${{ github.workspace }}/.github/conf/odoo.json
     CICD_SCRIPTS_PATH: ${{ github.workspace }}/.github/scripts
     CICD_UTILS_SCRIPTS_PATH: ${{ github.workspace }}/.github/scripts/utils.sh
+    JS_SCRIPT_PATH: /tmp/script
 
     # ==== Workflow inputs ====
     SOURCE_BRANCH: ${{ inputs.source_branch }}
@@ -112,6 +113,8 @@ jobs:
                   bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
 
             - uses: actions/checkout@v4
+              with:
+                  path: ${{env.JS_SCRIPT_PATH}}
 
             # - name: check folder
             #   run: |
@@ -124,7 +127,7 @@ jobs:
                   debug: true
                   github-token: ${{ env.APP_ACCESS_TOKEN }}
                   script: |
-                      const {default: script} = await import('${{ github.workspace }}/.github/src/script.js')
+                      const {default: script} = await import('${{env.JS_SCRIPT_PATH}}/.github/src/script.js')
                       const run_check_id = "${{steps.create-run-check.outputs.result}}"
                       const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
                       console.log(run_check_id)
