--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -114,7 +114,7 @@ jobs:
                   path: ${{github.workspace}}/script/
 
             - uses: actions/github-script@v7
-              id: update-run-check
+              if: ${{always()}}
               with:
                   github-token: ${{ env.APP_ACCESS_TOKEN }}
                   script: |
@@ -167,7 +167,190 @@ jobs:
                   path: ${{github.workspace}}/script/
 
             - uses: actions/github-script@v7
-              id: update-run-check
+              if: ${{always()}}
+              with:
+                  github-token: ${{ env.APP_ACCESS_TOKEN }}
+                  script: |
+                      const {default: script} = await import('${{github.workspace}}/script/.github/src/script.js')
+                      const run_check_id = "${{steps.create-run-check.outputs.result}}"
+                      const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
+
+                      const inputs = ${{ toJSON(inputs) }}
+                      return await script.updateRunCheck(github, inputs, run_check_id, status="completed", conclusion)
+
+    integration-test:
+        name: ${{inputs.repo_name}} - Integration test
+        runs-on: ubuntu-latest
+        if: inputs.action == 'deploy'
+        environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
+        env:
+            LOCAL_BACKUP_FILE_PATH: ${{github.workspace}}/odoo.tar.gz
+            SERVER_BACKUP_FOLDER: /tmp/odoo/backup/${{inputs.repo_name}}/${{inputs.target_branch}}
+            SERVER_LATEST_BACKUP_FILE_PATH: /tmp/odoo/backup/${{inputs.repo_name}}/${{inputs.target_branch}}/.odoo.tar.gz
+            GITHUB_RUN_ATTEMPT: ${{github.run_attempt}}
+
+        steps:
+            - uses: actions/checkout@v4
+
+            - uses: actions/github-script@v7
+              id: create-run-check
+              with:
+                  github-token: ${{ env.APP_ACCESS_TOKEN }}
+                  script: |
+                      const {default: script} = await import('${{ github.workspace }}/.github/src/script.js')
+                      const inputs = ${{ toJSON(inputs) }}
+                      return await script.createRunCheck(github, inputs, "Integration Test", "in_progress")
+
+            - name: Checkout Odoo source repository
+              uses: actions/checkout@v4
+              with:
+                  repository: ${{ env.REPOSITORY }}
+                  ssh-key: ${{ env.SSH_KEY_GITHUB }}
+                  path: ${{ env.REPO_PATH }}
+                  ref: ${{ inputs.commit_sha }}
+                  fetch-depth: 1
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: "Upload backup script file to server"
+              uses: appleboy/scp-action@v0.1.7
+              with:
+                  host: ${{ env.SERVER_HOST }}
+                  username: ${{ env.SERVER_USER }}
+                  key: ${{ secrets.SERVER_PRIVATE_KEY }}
+                  port: ${{ env.SERVER_SSH_PORT }}
+                  source: ${{ env.CICD_SCRIPTS_PATH }}/server-backup.sh
+                  target: ${{ env.SERVER_CICD_SCRIPT_FOLDER }}
+                  strip_components: 4
+
+            - name: "Backup Odoo on server"
+              uses: appleboy/ssh-action@v1.0.0
+              with:
+                  host: ${{ env.SERVER_HOST }}
+                  username: ${{ env.SERVER_USER }}
+                  key: ${{ secrets.SERVER_PRIVATE_KEY }}
+                  port: ${{ env.SERVER_SSH_PORT }}
+                  command_timeout: 30m
+                  script: |
+                      bash ${{ env.SERVER_CICD_SCRIPT_FOLDER }}/server-backup.sh "${{env.SERVER_DEPLOY_PATH}}" "${{env.SERVER_ODOO_DB_NAME}}" "${{secrets.SERVER_DB_PASSWORD}}" "${{env.ODOO_IMAGE_TAG}}" ${{ env.GITHUB_RUN_ATTEMPT }} "${{ env.SERVER_BACKUP_FOLDER }}"
+
+            - name: "Download backup file"
+              env:
+                  ssh_key: ${{ secrets.SERVER_PRIVATE_KEY }}
+              run: |
+                  keyfile_path=${{ github.workspace }}/$(date +%s)_key
+                  bash ${{ env.CICD_UTILS_SCRIPTS_PATH }} exec create_private_keyfile_from_content "$ssh_key" "$keyfile_path"
+                  scp -o StrictHostKeyChecking=no -P ${{ env.SERVER_SSH_PORT }} -i $keyfile_path ${{ env.SERVER_USER }}@${{ env.SERVER_HOST }}:${{ env.SERVER_LATEST_BACKUP_FILE_PATH }} ${{ env.LOCAL_BACKUP_FILE_PATH }}
+
+            - name: "Run Integration test"
+              id: run_integration_test
+              run: |
+                  bash $CICD_SCRIPTS_PATH/run-integration-test.sh ${{env.LOCAL_BACKUP_FILE_PATH}}
+
+            - uses: actions/checkout@v4
+              with:
+                  path: ${{github.workspace}}/script/
+
+            - uses: actions/github-script@v7
+              if: ${{always()}}
+              with:
+                  github-token: ${{ env.APP_ACCESS_TOKEN }}
+                  script: |
+                      const {default: script} = await import('${{github.workspace}}/script/.github/src/script.js')
+                      const run_check_id = "${{steps.create-run-check.outputs.result}}"
+                      const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
+
+                      const inputs = ${{ toJSON(inputs) }}
+                      return await script.updateRunCheck(github, inputs, run_check_id, status="completed", conclusion)
+
+    deploy-server:
+        name: ${{inputs.repo_name}} - Deploy server
+        runs-on: ubuntu-latest
+        environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
+        needs: [unit-test-at-install, unit-test-post-install, integration-test]
+        env:
+            SERVER_DEPLOY_SCRIPT_PATH: /tmp/odoo/cicd/${{inputs.repo_name}}/${{inputs.target_branch}}/deploy.sh
+            SSH_PRIVATE_KEY_GITHUB: /tmp/odoo/cicd/${{inputs.repo_name}}/${{inputs.target_branch}}/github_privatekey
+            commit_context: CI/CD - Deploy to Server
+        steps:
+            - uses: actions/checkout@v4
+
+            - uses: actions/github-script@v7
+              id: create-run-check
+              with:
+                  github-token: ${{ env.APP_ACCESS_TOKEN }}
+                  script: |
+                      const {default: script} = await import('${{ github.workspace }}/.github/src/script.js')
+                      const inputs = ${{ toJSON(inputs) }}
+                      return await script.createRunCheck(github, inputs, "Deploy to Server", "in_progress")
+
+            - name: Checkout Odoo source repository
+              uses: actions/checkout@v4
+              with:
+                  repository: ${{ env.REPOSITORY }}
+                  ssh-key: ${{ env.SSH_KEY_GITHUB }}
+                  path: ${{ env.REPO_PATH }}
+                  ref: ${{ inputs.commit_sha }}
+                  fetch-depth: 1
+
+            - name: "Upload deploy script file to server"
+              uses: appleboy/scp-action@v0.1.7
+              with:
+                  host: ${{ env.SERVER_HOST }}
+                  username: ${{ env.SERVER_USER }}
+                  key: ${{ secrets.SERVER_PRIVATE_KEY }}
+                  port: ${{ env.SERVER_SSH_PORT }}
+                  source: ${{ env.CICD_SCRIPTS_PATH }}/server-deploy.sh
+                  target: ${{ env.SERVER_CICD_SCRIPT_FOLDER }}
+                  strip_components: 4
+
+            - name: "Upload GitHub private key authen to Server"
+              env:
+                  private_key_for_github_authen: ${{ secrets.PRIVATE_KEY_FOR_GITHUB_AUTHEN }}
+                  ssh_key: ${{ secrets.SERVER_PRIVATE_KEY }}
+              run: |
+                  keyfile_path=/tmp/$(date +%s)
+                  private_key_dir=$(dirname $SSH_PRIVATE_KEY_GITHUB)
+                  bash ${{ env.CICD_UTILS_SCRIPTS_PATH }} exec create_private_keyfile_from_content "$ssh_key" "$keyfile_path"
+                  bash ${{ env.CICD_UTILS_SCRIPTS_PATH }} exec create_private_keyfile_from_content "$private_key_for_github_authen" "$SSH_PRIVATE_KEY_GITHUB"
+                  ssh -o StrictHostKeyChecking=no -p ${{ env.SERVER_SSH_PORT }} -i "$keyfile_path" ${{ env.SERVER_USER }}@${{ env.SERVER_HOST }} "mkdir -p $private_key_dir"
+                  scp -o StrictHostKeyChecking=no -P ${{ env.SERVER_SSH_PORT }} -i $keyfile_path "$SSH_PRIVATE_KEY_GITHUB" ${{ env.SERVER_USER }}@${{ env.SERVER_HOST }}:$private_key_dir
+
+            - name: "Deploy to server"
+              id: deploy_to_server
+              uses: appleboy/ssh-action@v1.0.0
+              env:
+                  SERVER_CUSTOM_ADDONS_PATH: ${{env.SERVER_DEPLOY_PATH}}/..
+                  SERVER_CONFIG_FILE: ${{env.SERVER_DEPLOY_PATH}}/etc/odoo.conf
+                  SERVER_DOCKER_COMPOSE_PATH: ${{env.SERVER_DEPLOY_PATH}}
+              with:
+                  host: ${{ env.SERVER_HOST }}
+                  username: ${{ env.SERVER_USER }}
+                  key: ${{ secrets.SERVER_PRIVATE_KEY }}
+                  port: ${{ env.SERVER_SSH_PORT }}
+                  script: |
+                      bash ${{ env.SERVER_CICD_SCRIPT_FOLDER }}/server-deploy.sh "${{env.SERVER_DOCKER_COMPOSE_PATH}}" "${{env.SERVER_CUSTOM_ADDONS_PATH}}" "${{env.SERVER_CONFIG_FILE}}" "${{ env.SSH_PRIVATE_KEY_GITHUB }}" "${{ env.SERVER_ODOO_URL }}" "${{ env.SERVER_ODOO_DB_NAME }}"
+
+            - name: The Deploy step has failed
+              if: ${{ failure() }}
+              run: |
+                  bash ${{env.CICD_SCRIPTS_PATH}}/post-server-deploy.sh "failed"
+
+            - name: The Deploy step has successful
+              if: ${{ success() }}
+              run: |
+                  bash ${{env.CICD_SCRIPTS_PATH}}/post-server-deploy.sh "success"
+
+            - uses: actions/checkout@v4
+              with:
+                  path: ${{github.workspace}}/script/
+
+            - uses: actions/github-script@v7
+              if: ${{always()}}
               with:
                   github-token: ${{ env.APP_ACCESS_TOKEN }}
                   script: |
