--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -80,6 +80,7 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
+            # fixme : rewrite these to reusable workflow or something
             - uses: actions/github-script@v7
               id: create-run-check
               with:
