--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -144,7 +144,7 @@ jobs:
                   script: |
                       const {default: script} = await import('${{ github.workspace }}/.github/src/script.js')
                       const inputs = ${{ toJSON(inputs) }}
-                      return await script.createRunCheck(github, inputs, "Unit test post install", "in_progress")
+                      return await script.createRunCheck(github, context, inputs, "Unit test post install", "in_progress")
 
             - name: Checkout Odoo source repository
               uses: actions/checkout@v4
