--- a/.github/actions/create-check-run/action.yml
+++ b/.github/actions/create-check-run/action.yml
@@ -1,9 +1,9 @@
 name: "Create check run"
 description: "Create check run for specific commit"
 inputs:
-    github-token:
-        description: "Github App Access Token"
-        required: true
+    # github-token:
+    #     description: "Github App Access Token"
+    #     required: true
     name:
         description: "Name of Check Run"
         required: true
@@ -11,7 +11,7 @@ inputs:
         description: "Status of Check Run"
         default: "in_progress"
 outputs:
-    random-number:
+    check-run-id:
         description: "Check Run ID"
         value: ${{ steps.create-run-check.outputs.result }}
 runs:
@@ -20,9 +20,9 @@ runs:
         - uses: actions/github-script@v7
           id: create-run-check
           with:
-              github-token: ${{inputs.github-token}}
+              #   github-token: ${{inputs.github-token}}
+              github-token: ${{ env.APP_ACCESS_TOKEN }}
               script: |
-                  console.log('==================== data ================ aa ===========')
                   const name = "${{inputs.name}}";
                   const status = "${{inputs.status}}";
                   const repo_data = core.getInput("repo_name").split("/");
@@ -30,17 +30,6 @@ runs:
                   const owner = repo_data[0];
                   const repo = repo_data[1];
                   const check_url = `${context.serverUrl}/${context.payload.repository.full_name}/actions/runs/${context.runId}`;
-
-                  console.log(github);
-                  console.log(context);
-                  console.log(core);
-                  console.log(repo_data);
-                  console.log(commit_sha);
-                  console.log(owner);
-                  console.log(repo);
-                  console.log(check_url);
-                  console.log(name);
-                  console.log(status);
 
                   const response = await github.rest.checks.create({
                       owner,
