--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -86,20 +86,13 @@ jobs:
         if: inputs.action == 'test' || inputs.action == 'deploy'
         steps:
             - uses: actions/checkout@v4
-            - id: test-use-composite-action
-              uses: ./.github/actions/create-check-run
-              with:
-                  github-token: ${{ env.APP_ACCESS_TOKEN }}
-                  name: "Unit test hahahaah"
 
-            # fixme : rewrite these to reusable workflow or something
-            - uses: actions/github-script@v7
-              id: create-run-check
+            - uses: ./.github/actions/create-check-run
+              id: create-check-run
+              name: Create run check
               with:
-                  github-token: ${{ env.APP_ACCESS_TOKEN }}
-                  script: |
-                      const {default: script} = await import('${{ github.workspace }}/.github/src/script.js')
-                      return await script.createRunCheck({github, context, core, name: "Unit test at install"})
+                  #   github-token: ${{ env.APP_ACCESS_TOKEN }}
+                  name: "Unit test at install"
 
             - name: Checkout Odoo source repository
               uses: actions/checkout@v4
@@ -131,7 +124,7 @@ jobs:
                   github-token: ${{ env.APP_ACCESS_TOKEN }}
                   script: |
                       const {default: script} = await import('${{github.workspace}}/script/.github/src/script.js')
-                      const run_check_id = "${{steps.create-run-check.outputs.result}}"
+                      const run_check_id = "${{steps.create-check-run.outputs.check-run-id}}"
                       const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
 
                       const inputs = ${{ toJSON(inputs) }}
@@ -146,7 +139,7 @@ jobs:
     #         - uses: actions/checkout@v4
 
     #         - uses: actions/github-script@v7
-    #           id: create-run-check
+    #           id: create-check-run
     #           with:
     #               github-token: ${{ env.APP_ACCESS_TOKEN }}
     #               script: |
@@ -183,7 +176,7 @@ jobs:
     #               github-token: ${{ env.APP_ACCESS_TOKEN }}
     #               script: |
     #                   const {default: script} = await import('${{github.workspace}}/script/.github/src/script.js')
-    #                   const run_check_id = "${{steps.create-run-check.outputs.result}}"
+    #                   const run_check_id = "${{steps.create-check-run.outputs.result}}"
     #                   const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
 
     #                   const inputs = ${{ toJSON(inputs) }}
@@ -204,7 +197,7 @@ jobs:
     #         - uses: actions/checkout@v4
 
     #         - uses: actions/github-script@v7
-    #           id: create-run-check
+    #           id: create-check-run
     #           with:
     #               github-token: ${{ env.APP_ACCESS_TOKEN }}
     #               script: |
@@ -271,7 +264,7 @@ jobs:
     #               github-token: ${{ env.APP_ACCESS_TOKEN }}
     #               script: |
     #                   const {default: script} = await import('${{github.workspace}}/script/.github/src/script.js')
-    #                   const run_check_id = "${{steps.create-run-check.outputs.result}}"
+    #                   const run_check_id = "${{steps.create-check-run.outputs.result}}"
     #                   const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
 
     #                   const inputs = ${{ toJSON(inputs) }}
@@ -290,7 +283,7 @@ jobs:
     #         - uses: actions/checkout@v4
 
     #         - uses: actions/github-script@v7
-    #           id: create-run-check
+    #           id: create-check-run
     #           with:
     #               github-token: ${{ env.APP_ACCESS_TOKEN }}
     #               script: |
@@ -364,7 +357,7 @@ jobs:
     #               github-token: ${{ env.APP_ACCESS_TOKEN }}
     #               script: |
     #                   const {default: script} = await import('${{github.workspace}}/script/.github/src/script.js')
-    #                   const run_check_id = "${{steps.create-run-check.outputs.result}}"
+    #                   const run_check_id = "${{steps.create-check-run.outputs.result}}"
     #                   const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
 
     #                   const inputs = ${{ toJSON(inputs) }}
