--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -89,9 +89,8 @@ jobs:
 
             - uses: ./.github/actions/create-check-run
               id: create-check-run
-              name: Create run check
+              name: Create Check Run
               with:
-                  #   github-token: ${{ env.APP_ACCESS_TOKEN }}
                   name: "Unit test at install"
 
             - name: Checkout Odoo source repository
@@ -110,7 +109,7 @@ jobs:
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Run Unit test cases
-              id: run_post_install_unit_test
+              id: run_at_install_unit_test
               run: |
                   bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
 
@@ -118,17 +117,24 @@ jobs:
               with:
                   path: ${{github.workspace}}/script/
 
-            - uses: actions/github-script@v7
-              if: ${{always()}}
+            - uses: ./.github/actions/update-check-run
+              id: update-check-run
+              name: Update Check Run
               with:
-                  github-token: ${{ env.APP_ACCESS_TOKEN }}
-                  script: |
-                      const {default: script} = await import('${{github.workspace}}/script/.github/src/script.js')
-                      const run_check_id = "${{steps.create-check-run.outputs.check-run-id}}"
-                      const conclusion = "${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
+                  check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
+                  conclusion: ${{ steps.run_at_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
 
-                      const inputs = ${{ toJSON(inputs) }}
-                      return await script.updateRunCheck(github, inputs, run_check_id, status="completed", conclusion)
+            # - uses: actions/github-script@v7
+            #   if: ${{always()}}
+            #   with:
+            #       github-token: ${{ env.APP_ACCESS_TOKEN }}
+            #       script: |
+            #           const {default: script} = await import('${{github.workspace}}/script/.github/src/script.js')
+            #           const run_check_id = "${{steps.create-check-run.outputs.check-run-id}}"
+            #           const conclusion = "${{ steps.run_at_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}"
+
+            #           const inputs = ${{ toJSON(inputs) }}
+            #           return await script.updateRunCheck(github, inputs, run_check_id, status="completed", conclusion)
 
     # unit-test-post-install:
     #     name: ${{inputs.repo_name}} - Unit test post install
