--- a/.github/actions/update-check-run/action.yml
+++ b/.github/actions/update-check-run/action.yml
@@ -24,6 +24,10 @@ runs:
                   const repo_data = core.getInput("repo_name").split("/");
                   const owner = repo_data[0];
                   const repo = repo_data[1];
+                  const check_run_id = "${{inputs.check-run-id}}";
+                  const status = "${{inputs.status}}";
+                  const conclusion = "${{inputs.conclusion}}";
+
 
                   await github.rest.checks.update({
                       owner,
