--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -95,7 +95,7 @@ jobs:
               id: create-check-run
               with:
                   name: "Unit test at install"
-                  job_id: ${{github.job}}
+                  job-id: ${{github.job}}
 
             - name: Checkout Odoo source repository
               uses: actions/checkout@v4
