--- a/.github/actions/scp-ssh/action.yml
+++ b/.github/actions/scp-ssh/action.yml
@@ -34,6 +34,7 @@ runs:
         #       strip_components: 4
 
         - name: "Download backup file"
+          shell: bash
           run: |
               function create_private_keyfile_from_content() {
                 content="$1"
