--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -179,6 +179,20 @@ jobs:
                   server_file: ${{ env.SERVER_CICD_SCRIPT_FOLDER }}
                   ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
 
+            - name: test download action
+              uses: ./.github/actions/scp-ssh
+              with:
+                  direction: "download"
+                  host: ${{env.SERVER_HOST}}
+                  port: ${{env.SERVER_SSH_PORT}}
+                  user: ${{env.SERVER_USER}}
+                  local_file: ${{github.workspace}}/hehahi.rs
+                  server_file: /tmp/get-me.rs
+                  ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
+            - name: check file content
+              run: |
+                  cat ${{github.workspace}}/hehahi.rs
+
             # - name: "Upload backup script file to server"
             #   uses: appleboy/scp-action@v0.1.7
             #   with:
